fix my-work clipping by adjusting mobile font-sizes

--- a/public/css/my-work.css
+++ b/public/css/my-work.css
@@ -14,10 +14,27 @@ header {
   text-transform: uppercase;
   color: white;
   font-weight: bold;
-  font-size: 4rem;
+  font-size: 2.75rem;
+}
+
+.project-description {
+  font-size: 1rem;
 }
 
 hr {
   border: none;
   border-bottom: 2px solid white;
+}
+
+
+@media (min-width: 760px) {
+
+  .project-title {
+    font-size: 4rem;
+  }
+
+  .project-description {
+    font-size: 1.5rem;
+  }
+
 }
